fixed brocken of client_test fixed aggregate functions in PS (BUG#3360)